[package]
name = "timeline"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.9"

rusqlite = "0.39.0"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.13.3", features = ["json"] }
dotenvy = "0.15"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
